redo complete